parser/functionalParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from functional.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class functionalParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		WS=10, INT=11, ID=12, STR=13, UNTERMINATEDSTR=14, PLUS=15, MINUS=16, TIMES=17, 
		LPAREN=18, RPAREN=19, EQUALS=20, DBLCOLON=21, ARROW=22, AND=23, OR=24, 
		LBRACK=25, RBRACK=26, COMMA=27, JOIN=28, DOT=29, NL=30;
	public const int
		RULE_program = 0, RULE_definition = 1, RULE_predicate = 2, RULE_anontypename = 3, 
		RULE_simpleanontypename = 4, RULE_definitiontypename = 5, RULE_definitionsimpletypename = 6, 
		RULE_stmt = 7, RULE_whereclause = 8, RULE_patt = 9, RULE_bindpatt = 10, 
		RULE_expr = 11, RULE_mathexpr = 12, RULE_term = 13, RULE_call = 14, RULE_atom = 15;
	public static readonly string[] ruleNames = {
		"program", "definition", "predicate", "anontypename", "simpleanontypename", 
		"definitiontypename", "definitionsimpletypename", "stmt", "whereclause", 
		"patt", "bindpatt", "expr", "mathexpr", "term", "call", "atom"
	};

	private static readonly string[] _LiteralNames = {
		null, "'module'", "'import'", "'include'", "'external'", "'type'", "'List'", 
		"'where'", "'_'", "'nil'", null, null, null, null, null, "'+'", "'-'", 
		"'*'", "'('", "')'", "'='", "'::'", "'->'", "'&'", "'|'", "'['", "']'", 
		"','", "':'", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, "WS", "INT", 
		"ID", "STR", "UNTERMINATEDSTR", "PLUS", "MINUS", "TIMES", "LPAREN", "RPAREN", 
		"EQUALS", "DBLCOLON", "ARROW", "AND", "OR", "LBRACK", "RBRACK", "COMMA", 
		"JOIN", "DOT", "NL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "functional.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static functionalParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public functionalParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public functionalParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(functionalParser.Eof, 0); }
		public ITerminalNode NL() { return GetToken(functionalParser.NL, 0); }
		public DefinitionContext[] definition() {
			return GetRuleContexts<DefinitionContext>();
		}
		public DefinitionContext definition(int i) {
			return GetRuleContext<DefinitionContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NL) {
				{
				State = 32; Match(NL);
				}
			}

			State = 38;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << ID))) != 0)) {
				{
				{
				State = 35; definition();
				}
				}
				State = 40;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 41; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefinitionContext : ParserRuleContext {
		public DefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_definition; } }
	 
		public DefinitionContext() { }
		public virtual void CopyFrom(DefinitionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ModuleDefinitionContext : DefinitionContext {
		public ITerminalNode[] ID() { return GetTokens(functionalParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(functionalParser.ID, i);
		}
		public ITerminalNode NL() { return GetToken(functionalParser.NL, 0); }
		public ITerminalNode[] DOT() { return GetTokens(functionalParser.DOT); }
		public ITerminalNode DOT(int i) {
			return GetToken(functionalParser.DOT, i);
		}
		public ModuleDefinitionContext(DefinitionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModuleDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunctionDefinitionContext : DefinitionContext {
		public PredicateContext predicate() {
			return GetRuleContext<PredicateContext>(0);
		}
		public ITerminalNode[] NL() { return GetTokens(functionalParser.NL); }
		public ITerminalNode NL(int i) {
			return GetToken(functionalParser.NL, i);
		}
		public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public FunctionDefinitionContext(DefinitionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ImportDefinitionContext : DefinitionContext {
		public ITerminalNode[] ID() { return GetTokens(functionalParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(functionalParser.ID, i);
		}
		public ITerminalNode NL() { return GetToken(functionalParser.NL, 0); }
		public ITerminalNode[] DOT() { return GetTokens(functionalParser.DOT); }
		public ITerminalNode DOT(int i) {
			return GetToken(functionalParser.DOT, i);
		}
		public ImportDefinitionContext(DefinitionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IncludeDefinitionContext : DefinitionContext {
		public ITerminalNode STR() { return GetToken(functionalParser.STR, 0); }
		public ITerminalNode NL() { return GetToken(functionalParser.NL, 0); }
		public IncludeDefinitionContext(DefinitionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncludeDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExternalFunctionDefinitionContext : DefinitionContext {
		public PredicateContext predicate() {
			return GetRuleContext<PredicateContext>(0);
		}
		public ITerminalNode NL() { return GetToken(functionalParser.NL, 0); }
		public ExternalFunctionDefinitionContext(DefinitionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExternalFunctionDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TypeDefinitionContext : DefinitionContext {
		public ITerminalNode ID() { return GetToken(functionalParser.ID, 0); }
		public ITerminalNode EQUALS() { return GetToken(functionalParser.EQUALS, 0); }
		public DefinitiontypenameContext definitiontypename() {
			return GetRuleContext<DefinitiontypenameContext>(0);
		}
		public ITerminalNode NL() { return GetToken(functionalParser.NL, 0); }
		public TypeDefinitionContext(DefinitionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefinitionContext definition() {
		DefinitionContext _localctx = new DefinitionContext(Context, State);
		EnterRule(_localctx, 2, RULE_definition);
		int _la;
		try {
			int _alt;
			State = 90;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				_localctx = new ModuleDefinitionContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 43; Match(T__0);
				State = 48;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 44; Match(ID);
						State = 45; Match(DOT);
						}
						} 
					}
					State = 50;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
				}
				State = 51; Match(ID);
				State = 52; Match(NL);
				}
				break;
			case T__1:
				_localctx = new ImportDefinitionContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 53; Match(T__1);
				State = 58;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 54; Match(ID);
						State = 55; Match(DOT);
						}
						} 
					}
					State = 60;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
				}
				State = 61; Match(ID);
				State = 62; Match(NL);
				}
				break;
			case T__2:
				_localctx = new IncludeDefinitionContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 63; Match(T__2);
				State = 64; Match(STR);
				State = 65; Match(NL);
				}
				break;
			case T__3:
				_localctx = new ExternalFunctionDefinitionContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 66; Match(T__3);
				State = 67; predicate();
				State = 68; Match(NL);
				}
				break;
			case ID:
				_localctx = new FunctionDefinitionContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 70; predicate();
				State = 71; Match(NL);
				State = 77;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 72; stmt();
						State = 73; Match(NL);
						}
						} 
					}
					State = 79;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
				}
				State = 80; stmt();
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NL) {
					{
					State = 81; Match(NL);
					}
				}

				}
				break;
			case T__4:
				_localctx = new TypeDefinitionContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 84; Match(T__4);
				State = 85; Match(ID);
				State = 86; Match(EQUALS);
				State = 87; definitiontypename();
				State = 88; Match(NL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PredicateContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(functionalParser.ID, 0); }
		public ITerminalNode DBLCOLON() { return GetToken(functionalParser.DBLCOLON, 0); }
		public AnontypenameContext anontypename() {
			return GetRuleContext<AnontypenameContext>(0);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_predicate; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPredicate(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PredicateContext predicate() {
		PredicateContext _localctx = new PredicateContext(Context, State);
		EnterRule(_localctx, 4, RULE_predicate);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92; Match(ID);
			State = 93; Match(DBLCOLON);
			State = 94; anontypename();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AnontypenameContext : ParserRuleContext {
		public AnontypenameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_anontypename; } }
	 
		public AnontypenameContext() { }
		public virtual void CopyFrom(AnontypenameContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class CompositeAnontypenameContext : AnontypenameContext {
		public SimpleanontypenameContext[] simpleanontypename() {
			return GetRuleContexts<SimpleanontypenameContext>();
		}
		public SimpleanontypenameContext simpleanontypename(int i) {
			return GetRuleContext<SimpleanontypenameContext>(i);
		}
		public ITerminalNode[] ARROW() { return GetTokens(functionalParser.ARROW); }
		public ITerminalNode ARROW(int i) {
			return GetToken(functionalParser.ARROW, i);
		}
		public CompositeAnontypenameContext(AnontypenameContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompositeAnontypename(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SimpleanontypenameAnontypenameContext : AnontypenameContext {
		public SimpleanontypenameContext simpleanontypename() {
			return GetRuleContext<SimpleanontypenameContext>(0);
		}
		public SimpleanontypenameAnontypenameContext(AnontypenameContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSimpleanontypenameAnontypename(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AnontypenameContext anontypename() {
		AnontypenameContext _localctx = new AnontypenameContext(Context, State);
		EnterRule(_localctx, 6, RULE_anontypename);
		try {
			int _alt;
			State = 106;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				_localctx = new CompositeAnontypenameContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 99;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 96; simpleanontypename();
						State = 97; Match(ARROW);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 101;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				State = 103; simpleanontypename();
				}
				break;
			case 2:
				_localctx = new SimpleanontypenameAnontypenameContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 105; simpleanontypename();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SimpleanontypenameContext : ParserRuleContext {
		public SimpleanontypenameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simpleanontypename; } }
	 
		public SimpleanontypenameContext() { }
		public virtual void CopyFrom(SimpleanontypenameContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AnontypenameSimpleanontypenameContext : SimpleanontypenameContext {
		public ITerminalNode LPAREN() { return GetToken(functionalParser.LPAREN, 0); }
		public AnontypenameContext anontypename() {
			return GetRuleContext<AnontypenameContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(functionalParser.RPAREN, 0); }
		public AnontypenameSimpleanontypenameContext(SimpleanontypenameContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAnontypenameSimpleanontypename(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NamedSimpleanontypenameContext : SimpleanontypenameContext {
		public ITerminalNode ID() { return GetToken(functionalParser.ID, 0); }
		public NamedSimpleanontypenameContext(SimpleanontypenameContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamedSimpleanontypename(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ListSimpleanontypenameContext : SimpleanontypenameContext {
		public SimpleanontypenameContext simpleanontypename() {
			return GetRuleContext<SimpleanontypenameContext>(0);
		}
		public ListSimpleanontypenameContext(SimpleanontypenameContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListSimpleanontypename(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SimpleanontypenameContext simpleanontypename() {
		SimpleanontypenameContext _localctx = new SimpleanontypenameContext(Context, State);
		EnterRule(_localctx, 8, RULE_simpleanontypename);
		try {
			State = 115;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__5:
				_localctx = new ListSimpleanontypenameContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 108; Match(T__5);
				State = 109; simpleanontypename();
				}
				break;
			case ID:
				_localctx = new NamedSimpleanontypenameContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 110; Match(ID);
				}
				break;
			case LPAREN:
				_localctx = new AnontypenameSimpleanontypenameContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 111; Match(LPAREN);
				State = 112; anontypename();
				State = 113; Match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefinitiontypenameContext : ParserRuleContext {
		public DefinitiontypenameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_definitiontypename; } }
	 
		public DefinitiontypenameContext() { }
		public virtual void CopyFrom(DefinitiontypenameContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AndtypeDefinitiontypenameContext : DefinitiontypenameContext {
		public ITerminalNode LPAREN() { return GetToken(functionalParser.LPAREN, 0); }
		public DefinitionsimpletypenameContext[] definitionsimpletypename() {
			return GetRuleContexts<DefinitionsimpletypenameContext>();
		}
		public DefinitionsimpletypenameContext definitionsimpletypename(int i) {
			return GetRuleContext<DefinitionsimpletypenameContext>(i);
		}
		public ITerminalNode RPAREN() { return GetToken(functionalParser.RPAREN, 0); }
		public ITerminalNode[] AND() { return GetTokens(functionalParser.AND); }
		public ITerminalNode AND(int i) {
			return GetToken(functionalParser.AND, i);
		}
		public AndtypeDefinitiontypenameContext(DefinitiontypenameContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAndtypeDefinitiontypename(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OrtypeDefinitiontypenameContext : DefinitiontypenameContext {
		public ITerminalNode LPAREN() { return GetToken(functionalParser.LPAREN, 0); }
		public ITerminalNode[] ID() { return GetTokens(functionalParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(functionalParser.ID, i);
		}
		public DefinitionsimpletypenameContext[] definitionsimpletypename() {
			return GetRuleContexts<DefinitionsimpletypenameContext>();
		}
		public DefinitionsimpletypenameContext definitionsimpletypename(int i) {
			return GetRuleContext<DefinitionsimpletypenameContext>(i);
		}
		public ITerminalNode RPAREN() { return GetToken(functionalParser.RPAREN, 0); }
		public ITerminalNode[] OR() { return GetTokens(functionalParser.OR); }
		public ITerminalNode OR(int i) {
			return GetToken(functionalParser.OR, i);
		}
		public OrtypeDefinitiontypenameContext(DefinitiontypenameContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IfunctionalVisitor<TResult> typedVisitor = visitor as IfunctionalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrtypeDefinitiontypename(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefinitiontypenameContext definitiontypename() {
		DefinitiontypenameContext _localctx = new DefinitiontypenameContext(Context, State);
		EnterRule(_localctx, 10, RULE_definitiontypename);
		try {
			int _alt;
			State = 141;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				_localctx = new AndtypeDefinitiontypenameContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 117; Match(LPAREN);
				State = 121;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 118; definitionsimpletypename();
						State = 119; Match(AND);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 123;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,10,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				State = 125; definitionsimpletypename();
				State = 126; Match(RPAREN);
				}
				break;
			case 2:
				_localctx = new OrtypeDefinitiontypenameContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 128; Match(LPAREN);
				State = 133;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 129; Match(ID);
						State = 130; definitionsimpletypename();
						State = 131; Match(OR);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 135;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,11,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				State = 137; Match(ID);
				State = 138; definitionsimpletypename();
				State = 139; Match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
